# C-hackathon-g17

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/core/: Alert.hpp  Sensor.hpp  Types.hpp  VehicleData.hpp
include/display/: Dashboard.hpp
include/logging/: EventLogger.hpp
include/managers/: AlertManager.hpp  SensorManager.hpp  ThreadManager.hpp
include/sensors/: BatterySensor.hpp  DoorSensor.hpp  EngineTemperatureSensor.hpp  SeatbeltSensor.hpp  Speedsensor.hpp  TirePressureSensor.hpp
include/utils/: JsonParser.hpp  Statistics.hpp  ThreadSafeQueue.hpp
logs/: vehicle_log.txt
src/: main.cpp
src/core/: Alert.cpp  Sensor.cpp  VehicleData.cpp
src/display/: Dashboard.cpp
src/logging/: EventLogger.cpp
src/managers/: AlertManager.cpp  SensorManager.cpp  ThreadManager.cpp
src/sensors/: BatterySensor.cpp  DoorSensor.cpp  EngineTemperatureSensor.cpp  SeatbeltSensor.cpp  SpeedSensor.cpp  TirePressureSensor.cpp
src/utils/: Statistics.cpp
tests/: all_critical.json  battery_low.json  engine_overheat.json  normal_conditions.json
